# IMCtermite

./: .dockerignore  .gitignore  Dockerfile  README.md  makefile  pytest.ini
.github/workflows/: pypi-deploy.yml  test.yml
lib/: imc_block.hpp  imc_buffer.hpp  imc_channel.hpp  imc_conversion.hpp  imc_object.hpp  imc_raw.hpp
python/: MANIFEST.in  imctermite.pxd  imctermite.pyi  imctermite.pyx  makefile  pyproject.toml  setup.cfg  setup.py
python/examples/: multichannel.py  usage.py  usage_adv.py  usage_ext.py  usage_files.py  usage_numpy_chunks.py  usage_timerange.py
python/imctermite/: __init__.py  _imctermite.pyi  _imctermite.pyx  _native.pxd
samples/: sample_x_precision.raw
src/: main.cpp
tests/: README.md  test_cli.py  test_python.py  test_streaming.py
