[build-system]
requires = ["setuptools>=77.0.0", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "imctermite"
description = "Enables extraction of measurement data from binary files with extension 'raw' used by proprietary software imcFAMOS and imcSTUDIO and facilitates its storage in open source file formats"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "Record Evolution GmbH", email = "mario.fink@record-evolution.de"}
]
maintainers = [
  {name = "Record Evolution GmbH"}
]
keywords = ["IMC", "raw", "imcFAMOS", "imcSTUDIO", "imcCRONOS"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "numpy>=1.26.0"
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest>=7.0.0"]

[project.urls]
Homepage = "https://github.com/RecordEvolution/IMCtermite.git"

[tool.setuptools]
# This is a package (imctermite) that ships a native extension module.
packages = ["imctermite"]
include-package-data = false

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.package-data]
imctermite = ["py.typed", "*.pyi"]

[tool.setuptools.exclude-package-data]
imctermite = ["*.pyx", "*.cpp"]

[tool.cibuildwheel]
# Build for Python 3.10-3.13
build = "cp310-* cp311-* cp312-* cp313-*"
# Skip 32-bit builds and musllinux
skip = "*-win32 *-manylinux_i686 *-musllinux_*"
# Tests are already run in test.yml workflow before wheel building
test-skip = "*"
